tests/NormalTests/paczka1/fuzzy1/47885055.err
Error in line 33: 6EMFyiMk S412 142,6
Error in line 35: ZXR S406 72,4
